Application Layer Initialize

--- a/Core/Eventify_Tutorial_Series.Application/Eventify_Tutorial_Series.Application.csproj
+++ b/Core/Eventify_Tutorial_Series.Application/Eventify_Tutorial_Series.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Eventify_Tutorial_Series.Domain\Eventify_Tutorial_Series.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
