--- a/Infrastructure/Eventify_Tutorial_Series.Persistence/Eventify_Tutorial_Series.Persistence.csproj
+++ b/Infrastructure/Eventify_Tutorial_Series.Persistence/Eventify_Tutorial_Series.Persistence.csproj
@@ -6,4 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\Eventify_Tutorial_Series.Application\Eventify_Tutorial_Series.Application.csproj" />
+    <ProjectReference Include="..\..\Core\Eventify_Tutorial_Series.Domain\Eventify_Tutorial_Series.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
