--- a/Infrastructure/Eventify_Tutorial_Series.Infrastructure/Eventify_Tutorial_Series.Infrastructure.csproj
+++ b/Infrastructure/Eventify_Tutorial_Series.Infrastructure/Eventify_Tutorial_Series.Infrastructure.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\Eventify_Tutorial_Series.Application\Eventify_Tutorial_Series.Application.csproj" />
+  </ItemGroup>
+
 </Project>
