--- a/Core/Eventify_Tutorial_Series.Application/Eventify_Tutorial_Series.Application.csproj
+++ b/Core/Eventify_Tutorial_Series.Application/Eventify_Tutorial_Series.Application.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Eventify_Tutorial_Series.Domain\Eventify_Tutorial_Series.Domain.csproj" />
   </ItemGroup>
 
